--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@payloadcms/richtext-lexical": "3.59.0",
     "@payloadcms/ui": "3.59.0",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remixicon/react": "^4.6.0",
